--- a/parties/presentation.html
+++ b/parties/presentation.html
@@ -29,7 +29,7 @@
             </div>
 
             <div class="col col-6 d-md-block d-none">
-                <img src="./assets/images/ff.jpg" class="w-50">
+                <img src="assets/images/ff.jpg" class="w-50">
             </div>
         </div>
     </div>
