--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                     </div>
 
                     <div class="col col-6 d-md-block d-none">
-                        <img src="/assets/images/ff.jpg" class="w-50">
+                        <img src="assets/images/ff.jpg" class="w-50">
                     </div>
                 </div>
             </div>
@@ -203,7 +203,7 @@
 
                 <div class="row">
                     <div class="col col-12 col-lg-6 text-center">
-                        <img src="/assets/images/fordthomas.jpg" class="w-50 border border-warning mb-4 justify-content-center mx-auto">
+                        <img src="assets/images/fordthomas.jpg" class="w-50 border border-warning mb-4 justify-content-center mx-auto">
                     </div>
                     <div class="col col-12 col-lg-6">
                         <div class="accordion accordion-flush" id="accordionFlushExample">
