--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                                     </li>
                                 </ul>
                                 </p>
-                                <a href="/fff.html" class="btn btn-warning">Choisir Cette Offre</a>
+                                <a href="fff.html" class="btn btn-warning">Choisir Cette Offre</a>
                             </div>
                         </div>
                     </div>
