--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             padding: 60px 0;
         }
     </style>
-    <title>Formation HTML/CSS</title>
+    <title>LocaFiesta</title>
 </head>
 <body>
 <!--    Barre de navigation-->
