--- a/fff.html
+++ b/fff.html
@@ -65,7 +65,7 @@
 <section>
     <div class="container">
         <h1 class="text-center mt-5"> Page de paiement : </h1>
-        <div class="text-center"><img src="/assets/images/ecom.jpg" class="mt-5 border border-warning"></div>
+        <div class="text-center"><img src="assets/images/ecom.jpg" class="mt-5 border border-warning"></div>
 
 
         <div class="card text-center mt-5">
