--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
                                     </li>
                                 </ul>
                                 </p>
-                                <a href="/fff.html" class="btn btn-warning">Choisir Cette Offre</a>
+                                <a href="fff.html" class="btn btn-warning">Choisir Cette Offre</a>
                             </div>
                         </div>
                     </div>
@@ -179,7 +179,7 @@
                                     </li>
                                 </ul>
                                 </p>
-                                <a href="/fff.html" class="btn btn-warning">Choisir Cette Offre</a>
+                                <a href="fff.html" class="btn btn-warning">Choisir Cette Offre</a>
                             </div>
                         </div>
                     </div>
