--- a/fff.html
+++ b/fff.html
@@ -73,7 +73,7 @@
                 <span class="badge text-bg-warning w-auto fs-1">Choisir un moyen de paiement</span>
             </div>
             <div class="card-body border">
-                <h5 class="card-title">Prix <span class="">XXX.XX €</span></h5>
+                <h5 class="card-title">Prix <span class="">400.00 € / Mois</span></h5>
                 <p class="card-text">La politique de l'entreprise FiestaLoc est fait de sorte à ce que nous ne rembourserons aucun paiement !</p>
                 <a href="https://www.paypal.com/fr/home" class="btn btn-primary">Paypal</a>
                 <a href="https://t0.gstatic.com/licensed-image?q=tbn:ANd9GcSL_5_PUuWKc7SfGMKekFSMZ-ZHqYJsKTJX8sZZLJWfHq62Lfvt8x0j6F8G-IZCdSJc" class="btn btn-danger">Carte de crédit</a>
