--- a/index.html
+++ b/index.html
@@ -214,8 +214,8 @@
                                     </button>
                                 </h2>
                                 <div id="flush-collapseOne" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
-                                    <div class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate the <code>.accordion-flush</code> class. This is the first item's accordion body.</div>
-                                </div>
+                                    <div class="accordion-body">Sous le capot, découvrez un moteur suralimenté délivrant une puissance époustouflante de 1000 chevaux, propulsant la Ford Fiesta dans une nouvelle dimension de vitesse et de dynamisme. L'accélération instantanée, la réponse précise de la direction et la tenue de route incomparable font de cette voiture une véritable bête de course.
+                                    </div>
                             </div>
                             <div class="accordion-item">
                                 <h2 class="accordion-header">
@@ -224,8 +224,8 @@
                                     </button>
                                 </h2>
                                 <div id="flush-collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
-                                    <div class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate the <code>.accordion-flush</code> class. This is the second item's accordion body. Let's imagine this being filled with some actual content.</div>
-                                </div>
+                                    <div class="accordion-body">Lorsque vous prenez place à bord, vos mains rencontrent le luxe avec un volant revêtu d'Alcantara, mariant confort et élégance. La texture douce et agréable de l'Alcantara procure une sensation de qualité supérieure, ajoutant une touche de sophistication à l'habitacle. Chaque trajet devient une expérience sensorielle, où le toucher raffiné du volant souligne le niveau exceptionnel de la finition ST Line.
+                                    </div>
                             </div>
                             <div class="accordion-item">
                                 <h2 class="accordion-header">
@@ -234,8 +234,8 @@
                                     </button>
                                 </h2>
                                 <div id="flush-collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
-                                    <div class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate the <code>.accordion-flush</code> class. This is the third item's accordion body. Nothing more exciting happening here in terms of content, but just filling up the space to make it look, at least at first glance, a bit more representative of how this would look in a real-world application.</div>
-                                </div>
+                                    <div class="accordion-body">Sous le capot, la Ford Fiesta ST Line abrite un moteur suralimenté qui propulse cette bête de route de 0 à 200 km/h en seulement 4 secondes, offrant une accélération fulgurante qui fera battre votre cœur plus fort. La combinaison parfaite entre la technologie de pointe et l'ingénierie de précision permet à cette édition de délivrer une performance inégalée sur la route.
+                                    </div>
                             </div>
                             <div class="accordion-item">
                                 <h2 class="accordion-header">
@@ -244,8 +244,8 @@
                                     </button>
                                 </h2>
                                 <div id="flush-collapseFour" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
-                                    <div class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate the <code>.accordion-flush</code> class. This is the third item's accordion body. Nothing more exciting happening here in terms of content, but just filling up the space to make it look, at least at first glance, a bit more representative of how this would look in a real-world application.</div>
-                                </div>
+                                    <div class="accordion-body">La Ford Fiesta ST Line n'est pas seulement une voiture, c'est une athlète de la route. Son temps record sur le Nürburgring témoigne de son agilité, de sa puissance et de sa maîtrise sur le circuit. Chaque virage, chaque ligne droite devient une opportunité pour cette voiture de démontrer sa supériorité, laissant ses concurrentes loin derrière.
+                                    </div>
                             </div>
                         </div>
 
